# rack

./: .coveragerc  .dockerignore  .gitignore  .gitreview  .testr.conf  Dockerfile  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
etc/: api-paste.ini  rack.conf.sample
rack/: __init__.py  baserpc.py  config.py  context.py  debugger.py  exception.py  manager.py  netconf.py  object.py  paths.py  policy.py  rpc.py  safe_utils.py  service.py  test.py  utils.py  version.py  wsgi.py
rack/api/: __init__.py  auth.py  common.py  versions.py  wsgi.py  xmlutil.py
rack/cmd/: __init__.py  api.py  resourceoperator.py  scheduler.py
rack/db/: __init__.py  api.py  base.py  migration.py
rack/resourceoperator/: manager.py  rpcapi.py
rack/scheduler/: __init__.py  chance.py  driver.py  manager.py  rpcapi.py  utils.py
rack/servicegroup/: __init__.py  api.py
rack/tests/: __init__.py  conf_fixture.py  fake_policy.py  policy_fixture.py  test_service.py  utils.py
tools/: group-init.conf  rack_client.py  simple_integration_test.py
tools/ansible-openstack/: README.md  ansible.cfg  openstack_hosts  set_ceilometer.yml  set_openstack.yml
tools/ansible-openstack-log/: OpenStackLogDashboard  README.md  ansible.cfg  log_hosts  set_log.yml
tools/fluentd-plugin-udp_msgpack/: Gemfile  README.md  Rakefile  fluent-plugin-udp_msgpack.gemspec
tools/setup/: README.md  README_ja.md  docker-compose-api.yml  docker-compose-proxy.yml  docker-init.sh  get_rackapi_addr.py  imagebuild.sh  init.sh  rack-init.sh  rack.conf  (+3 more)
(+270 files in other folders)
