[metadata]
name = rack
version = 0.1.0
summary = Real Application Centric Kernel
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/RACK
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    rack

[entry_points]
console_scripts =
    rack-api = rack.cmd.api:main
    rack-scheduler = rack.cmd.scheduler:main
    rack-resourceoperator = rack.cmd.resourceoperator:main

